Selecciona y justifica las herramientas para la interfaz #94

--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -407,3 +407,16 @@ sin necesidad de modificar la lógica de búsqueda o filtrado ya implementada.
 Se han añadido dos nuevos campos al modelo de datos de Escudo: \texttt{provincia} e \texttt{imagen}. El primero permite almacenar la provincia
 a la que pertenece el escudo, facilitando futuras búsquedas o clasificaciones basadas en la ubicación geográfica, y el segundo campo almacena 
 la URL de la imagen del escudo, lo que permite mostrar visualmente el escudo en futuras interfaces de usuario.
+
+\section{Milestone 6: Interfaz de usuario básica}
+En este hito se desarrolla una interfaz de usuario básica que permite consultar la base de datos de escudos heráldicos. La interfaz se implementa
+como una aplicación web sencilla que permite a los usuarios realizar búsquedas y visualizar los resultados de manera intuitiva.
+
+En cuanto al tipo de interfaz, se consideraron dos alternativas principales: una interfaz de línea de comandos (CLI) y una interfaz web ligera. 
+La interfaz CLI ofrece simplicidad y reproducibilidad, pero limita la experiencia de usuario y dificulta la validación visual del sistema. Por otro 
+lado, una interfaz web mínima permite una presentación más intuitiva y demostrable, manteniendo una complejidad moderada.
+
+Tras esa simple comparación, se opta por una \textbf{interfaz web mínima}, al proporcionar un equilibrio óptimo entre facilidad de desarrollo, 
+usabilidad y capacidad de demostración, además de facilitar futuras ampliaciones del sistema.
+
+Las herramientas seleccionadas para implementar esta interfaz web se detallan en el \hyperref[sec:interfaz-herramientas]{capítulo anterior}.
