--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -328,7 +328,7 @@ complejidad operativa (es una sola herramienta).
 Se integra en CI con un workflow que se lanza en cada push o pull request y hace fallar la integración si hay 
 errores de estilo o de formato.
 
-\section{Base de datos}\label{sec:base-datos}
+\subsection{Base de datos}\label{sec:base-datos}
 Antes de comenzar con el diseño de la base de datos, es necesario definir las herramientas que se emplearán para 
 su creación y gestión. En este caso, no basta con elegir una sola herramienta, sino que deben seleccionarse dos 
 componentes distintos aunque complementarios: por un lado, el motor de base de datos, que es el responsable de 
@@ -339,7 +339,7 @@ registros en la base de datos.
 Esta separación de las herramientas permite mantener el proyecto modular y flexible, facilitando cambios futuros sin
 que ello afecte a toda la arquitectura del sistema.
 
-\subsection{Motor de base de datos}
+\subsubsection{Motor de base de datos}
 El motor de base de datos es el componente encargado de almacenar físicamente los datos, gestionar las consultas y
 mantener la integridad de la información. En este proyecto se ha considerado necesario utilizar un motor relacional,
 ya que permite representar de manera natural las relaciones entre las entidades del dominio.
@@ -350,7 +350,7 @@ un escudo está compuesto por un campo, uno o varios muebles y, opcionalmente, u
 relaciones y restricciones bien definidas. Este tipo de información se modela de manera más natural y segura en un 
 sistema relacional, donde las dependencias y reglas de integridad pueden expresarse explícitamente.
 
-\subsubsection{Herramientas consideradas}
+\paragraph{Herramientas consideradas}
 Se han evaluado las siguientes opciones:
 
 \begin{itemize}
@@ -369,7 +369,7 @@ Se han evaluado las siguientes opciones:
     el caso de este proyecto.
 \end{itemize}
 
-\subsubsection{Herramienta seleccionada}
+\paragraph{Herramienta seleccionada}
 Para este proyecto se selecciona \textbf{SQLite} como motor de base de datos.  
 Su simplicidad, portabilidad y compatibilidad con el ecosistema Python la hacen ideal para el desarrollo incremental
 guiado por pruebas que sigue este trabajo. Al almacenar los datos en un único archivo, evita dependencias externas
@@ -380,13 +380,13 @@ Además, en caso de que el proyecto evolucione hacia una aplicación web o de ma
 más robusto como PostgreSQL puede realizarse sin grandes cambios en el código gracias al uso de una capa de acceso
 independiente.
 
-\subsection{Capa de acceso a datos}
+\subsubsection{Capa de acceso a datos}
 La capa de acceso a datos es la responsable de conectar el código Python con la base de datos, permitiendo trabajar 
 con las tablas mediante clases y objetos en lugar de escribir consultas SQL manuales. Este enfoque se conoce como 
 \textit{Object-Relational Mapping} (ORM) \cite{fowlerPatterns}, y facilita que el modelo de datos del programa 
 refleje directamente la estructura del dominio, manteniendo la coherencia con las clases ya definidas en el proyecto.
 
-\subsubsection{Herramientas consideradas}
+\paragraph{Herramientas consideradas}
 Se han valorado las siguientes opciones:
 
 \begin{itemize}
@@ -409,7 +409,7 @@ Se han valorado las siguientes opciones:
     de proyecto completamente diferente, sin aportar ventajas reales en este contexto.
 \end{itemize}
 
-\subsubsection{Herramienta seleccionada}
+\paragraph{Herramienta seleccionada}
 Para este proyecto se ha elegido \textbf{SQLModel} como capa de acceso a datos.  
 Ofrece una sintaxis sencilla y moderna, basada en anotaciones de tipo, que encaja bien con las clases del dominio 
 ya desarrolladas en los hitos anteriores. Esto permite definir las tablas de la base de datos de forma muy similar 
@@ -436,3 +436,57 @@ Para extraer datos de páginas estáticas (Wikipedia) se han considerado tres op
 \subsubsection{Herramienta seleccionada}
 Se ha seleccionado \textbf{Requests + BeautifulSoup} por su simplicidad, velocidad de desarrollo y ajuste al alcance 
 del proyecto: permite iterar rápido, añade poca dependencia y cubre las necesidades del scraping planteado.
+
+\subsection{Herramientas para la interfaz de usuario} \label{sec:interfaz-herramientas}
+Con el objetivo de garantizar una implementación sencilla, reproducible y coherente con la arquitectura modular del sistema, 
+se analizaron distintas herramientas y librerías para el desarrollo de la interfaz web. La selección se realizó en función 
+de los siguientes criterios:
+
+\begin{itemize}
+    \item \textbf{Compatibilidad} con el entorno gestionado por \texttt{Poetry}.
+    \item \textbf{Simplicidad y ligereza}, evitando dependencias innecesarias o procesos complejos.
+    \item \textbf{Mantenibilidad y extensibilidad}, permitiendo futuras ampliaciones sin reestructurar la aplicación.
+\end{itemize}
+
+El diseño de una interfaz web implica resolver cuatro aspectos principales: cómo se gestionan las peticiones del 
+usuario, cómo se muestran los resultados, cómo se actualiza la información sin recargar toda la página y cómo se 
+presenta visualmente la aplicación. Cada una de estas partes requiere una herramienta específica.
+
+\subsubsection{Gestión de peticiones y controladores}
+Cuando el usuario realiza una búsqueda, la aplicación debe recibir esa solicitud, procesarla y devolver los 
+resultados adecuados. Para ello conviene usar un framework que gestione las rutas y las peticiones web,
+proporcionando una estructura base sin tener que implementarlo todo desde cero. Esto agiliza el desarrollo y
+reduce la probabilidad de errores.
+
+Se evaluaron tres opciones de frameworks: \textit{Django}, \textit{FastAPI} y \textit{Flask}. 
+\textit{Django} fue descartado porque impone una estructura demasiado grande para un proyecto de este tamaño, 
+y \textit{FastAPI} porque está más pensado para crear servicios API que para renderizar páginas, por lo que
+se eligió \textbf{Flask}, ya que es ligero, muy fácil de integrar con el modelo de datos del sistema y 
+suficiente para el tipo de interfaz que se busca desarrollar.
+
+\subsubsection{Generación de vistas}
+Una vez obtenidos los resultados, es necesario mostrarlos en una página HTML. 
+Para no generar el código HTML manualmente, se utiliza un motor de plantillas, 
+que permite generar una estructura base y rellenarla con los datos de cada escudo.  
+Flask incluye de forma nativa \textbf{Jinja2}, un motor sencillo y potente que evita añadir más dependencias y
+permite construir páginas reutilizables, mantener el código limpio y separar claramente la presentación visual 
+de la lógica del programa.
+
+\subsubsection{Actualización dinámica de contenido}
+Aunque la interfaz es muy simple, resulta más cómodo que el usuario pueda ver los resultados 
+sin tener que recargar toda la página cada vez que realiza una búsqueda.  
+En lugar de usar un framework de JavaScript completo (como React o Vue), que añadiría mucha complejidad 
+innecesaria, se eligió \textbf{HTMX}, una pequeña biblioteca que permite actualizar solo una parte de la página 
+(por ejemplo, la lista de resultados) mediante peticiones asíncronas al servidor. De este modo se mejora la 
+experiencia de uso sin abandonar la estructura ligera del proyecto.
+
+\subsubsection{Presentación visual}
+Por último, es importante que la interfaz resultara clara y agradable sin invertir tiempo 
+en diseñar una hoja de estilos desde cero.  
+Para ello se utiliza \textbf{Pico.css}, una hoja de estilos que se carga directamente desde Internet y aplica un diseño 
+limpio y accesible. De esta forma no es necesario instalar ni configurar librerías adicionales.
+
+\subsubsection{Herramientas seleccionadas}
+El conjunto de herramientas escogido ofrece un equilibrio entre simplicidad técnica y una buena experiencia de usuario. 
+Permite tener una aplicación funcional, fácilmente reproducible y adaptable a futuras mejoras, como la inclusión de 
+filtros adicionales o módulos de inteligencia artificial para clasificar los escudos.
