Separa herramientas de backend

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -304,3 +304,18 @@
   publisher = {Addison-Wesley},
   note      = {Capítulo 3: Mapping to Relational Databases}
 }
+
+@phdthesis{fielding2000rest,
+  author = {Fielding, Roy Thomas},
+  title = {Architectural Styles and the Design of Network-based Software Architectures},
+  school = {University of California, Irvine},
+  year = {2000}
+}
+
+@techreport{reenskaug1979mvc,
+  author = {Reenskaug, Trygve},
+  title = {Models - Views - Controllers},
+  institution = {Xerox Palo Alto Research Center (PARC)},
+  year = {1979},
+  note = {Nota técnica disponible en \url{http://heim.ifi.uio.no/~trygver/themes/mvc/mvc-index.html}}
+}
