Añade captura de la interfaz

--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -506,6 +506,13 @@ Cada tarjeta incluye el nombre del municipio, una miniatura clicable con la imag
 y una serie de distintivos (\emph{badges}) con los atributos más relevantes:
 campo, muebles, pieza heráldica, adorno y portador.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{figuras/basicUI.png}
+    \caption{Interfaz web inicialmostrando resultados de búsqueda.}
+    \label{fig:interfaz-basica}
+\end{figure}
+
 En esta fase no se emplean plantillas ni JavaScript, siguiendo un enfoque \textit{server-side} puro
 que prioriza la transparencia y la sencillez del código.  
 El diseño se mantiene intencionadamente minimalista, con un HTML básico generado desde la vista
