--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -494,7 +494,7 @@ devolviendo los resultados en una estructura más simple y apta para renderizado
 De esta forma, cada entidad del dominio se convierte en un diccionario de Python con valores de texto 
 plano.
 
-El adaptador incluye un método \texttt{buscar\_libre()}, que combina los distintos criterios de filtrado
+El adaptador incluye un método llamado \texttt{buscar libre}, que combina los distintos criterios de filtrado
 del catálogo en una única búsqueda global. Además, si no se recibe ningún término de búsqueda, el método
 devuelve el catálogo completo, lo que permite explorar todos los escudos sin necesidad de especificar 
 criterios.
